# fundeb-facil

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agents/: calculator.py  conversational.py  graph.py
data/: create_database.py  fundeb_data.db  rag_chunks.json
rag/: indexer.py  retriever.py
scripts/: populate_database.py
