[project]
name = "fundeb-facil"
version = "0.1.0"
description = "Sistema Inteligente para Compreensão e Projeção de Complementações Orçamentárias do FUNDEB"
authors = [
    {name = "Rodrigo Santos Ramos", email = "rodrigo@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.1.4",
    "plotly>=5.18.0",
    "anthropic>=0.18.1",
    "langchain>=0.1.9",
    "langchain-anthropic>=0.1.4",
    "langgraph>=0.0.26",
    "chromadb>=0.4.22",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fundeb_facil"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]
